<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC Share</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- For action bar -->
    <string name="new_event">New Event</string>
    <string name="write_tag">Write to tag</string>
    <string name="overflow_icon">Open Menu</string>

    <!-- Menu list -->
    <string name="title_sendMsg">Send Notification</string>
    <string name="title_deleteExpired">Delete Expired Events</string>
    <string name="title_erase">Erase Tag</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>

    <!-- Pictures -->
    <string name="pic_writetotag">Tap to write to tag!</string>
    <string name="pic_erasecontent">Tap to erase all content from tag.</string>
    <string name="pic_erasetime">This may take up to a minute.</string>
    <string name="arrowDescription">Show how to start off by adding new events</string>
    <string name="imLoginDescription">Start off image</string>
    <string name="alarmClockDesc">Add an alarm to remind you of the surgery</string>

    <!-- Text Views -->
    <string name="notifyInstructions">This allows you to send a broadcast notification message to all the doctors in your chosen department.</string>
    
    <string name="about_title">NFC Share - Admin</string>
    <string name="about_text1">NFC Share Admin lets the administrator of the hospital department create a detailed operation schedule and then save it to a secure NFC tag.</string>
    <string name="about_text2">NFC Share Admin allows for easy opertation entry creation, editing, viewing and deletion.</string>
    <string name="about_text3">When the operation schedule is complete it can be easily written to an NFC tag by just tapping the phone to the tag. At the same time an update notification is send to all NFC Share Users via Internet connection.</string>
    <string name="about_text4">NFC Share Admin also allows to send broadcast notifications to all NFC Share Users.</string>
    <string name="about_dev">The Developers</string>
    <string name="about_dev_text1">We are a team of graduating students from the AUST Information Technology College. Our main goal was to deliver a useful application that would integrate all our studies into one project.</string>
    <string name="about_dev_text2">We hope that this project has been a success and that it achieves what it was aimed for; creating a paperless hospital environment by using the latest IT solutions.</string>
    
    <!-- For 'Cancel Done Menu' -->
    <string name="title_cancel">Cancel</string>
    <string name="title_done">Done</string>

    <!-- For 'Edit Delete Menu' -->
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>

    <!-- For Text Field hints -->
    <string name="hint_title">Operation Title</string>
    <string name="hint_room">Operation Room</string>
    <string name="hint_addInfo">Additional Information</string>
    <string name="hint_pName">Patient Name</string>
    <string name="hint_sendNotif">Type a message ..  </string>

    <!-- Detail Event Labels -->
    <string name="label_date">Date:</string>
    <string name="label_time">Time:</string>
    <string name="label_title">Title:</string>
    <string name="label_loc">Room:</string>
    <string name="label_nameP">Patient:</string>
    <string name="label_nameD">Doctor:</string>
    <string name="label_desc">Info:</string>

    <!-- Sections on Add Event Activity -->
    <string name="section_EventDetails">Surgery Details</string>
    <string name="section_EventTime">Date and Time</string>
    <string name="section_SendNotif">Send Notificaion</string>

    <!-- Add Event Buttons -->
    <string name="btn_FromTime">From Time</string>
    <string name="btn_ToTime">To Time</string>
    <string name="btn_Date">Date</string>
    <string name="btn_location">Select Operation Room</string>
    <string name="btn_doctor">Select Doctor</string>
    <string name="btn_department">Select Department</string>

    <!-- For single row list -->
    <string name="lText">Large Text</string>
    <string name="sText">Small Text</string>

    <!-- For spinners -->

    <string-array name="arrayDepartments">
        <item>Cardiology</item>
        <item>Cancer Care Unit</item>
        <item>Dermatology</item>
        <item>Diabetology</item>
        <item>Digestive Diseases</item>
        <item>Medical ICU</item>
        <item>Surgical ICU</item>
        <item>Neurology</item>
        <item>Orthopedics</item>
        <item>Pediatric</item>
        <item>Plastic Surgery</item>
    </string-array>
    <string-array name="arrayDoctors">
        <item>Dr. Suhail Al Rukn</item>
        <item>Dr. Abubaker Almadani</item>
        <item>Dr. Mohammed Saadah</item>
        <item>Dr. Suresh Nair</item>
        <item>Dr. Ayman Alboudi</item>
        <item>Dr. Mohamed Hamdy Ibrahim</item>
        <item>Dr. Zulfa Omar Deesi</item>
        <item>Dr. Fahad Omar Baslaib</item>
    </string-array>
    <string-array name="arrayDoctors2">
        <item>Dr. Moosa Kunhi</item>
        <item>Dr. Ehab Moheyeldin</item>
        <item>Dr. Ani Purushothaman</item>
        <item>Dr. Mais M Mauwfak</item>
        <item>Dr. Mohamed Ahmed</item>
        <item>Dr. Omaia Siddig Bashir</item>
    </string-array>
    <string-array name="arrayLocation">
        <item>Theatre E1</item>
        <item>Theatre E2</item>
        <item>Theatre E3</item>
        <item>Theatre E4</item>
        <item>Theatre G102</item>
        <item>Theatre G103</item>
        <item>Theatre B2</item>
        <item>Theatre B3</item>
    </string-array>
    <string-array name="arrayLocation2">
        <item>OR 1</item>
        <item>OR 2</item>
        <item>OR 3</item>
        <item>OR 4</item>
        <item>Theatre G104</item>
        <item>Theatre G105</item>
        <item>Theatre B3</item>
        <item>Theatre B4</item>
    </string-array>

    <!-- For Main Activity -->
    <string name="enter_pass">Enter department password</string>
    <string name="btn_login">Login</string>
    <string name="hint_pass">Enter password</string>

    <!-- For Event Details -->


    <!-- Automatic for manifest, change title on screen -->
    <string name="title_activity_add_event">Add Event</string>
    <string name="title_activity_write_to_tag">Write to tag</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_password_tag">Change Password</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_main">Event Share</string>
    <string name="title_activity_message">Message Activity</string>

</resources>